--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        swift-version: "5.6.0"
     - name: Build
       run: swift build -v
 
@@ -21,5 +23,7 @@ jobs:
     runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        swift-version: "5.6.0"
     - name: Test
       run: swift test -v
