--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install bundled Gems
-        run: bundle install --without=documentation --jobs 4 --retry 3
+        run: bundle install --jobs 4 --retry 3
       - name: Deploy to CocoaPods
         env:
           COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
